--- a/package.json
+++ b/package.json
@@ -3,50 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "next dev",
-    "dev:fast": "next dev --turbo",
-    "dev:backend": "cd backend && nodemon server.js",
-    "dev:frontend-only": "next dev",
-    "seed": "cd backend && node seed.js",
+    "dev": "next dev",
     "build": "next build",
-    "build:analyze": "ANALYZE=true npm run build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "server": "cd backend && node server.js",
-    "clean": "if (Test-Path .next) { Remove-Item -Recurse -Force .next }",
-    "type-check": "tsc --noEmit"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^8.2.2",
-    "cors": "^2.8.5",
-    "date-fns": "^2.30.0",
-    "dotenv": "^17.2.0",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.294.0",
-    "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
-    "next": "^14.2.30",
     "postcss": "^8",
-    "react": "^18",
-    "react-calendar": "^4.8.0",
-    "react-dom": "^18",
-    "recharts": "^2.8.0",
-    "stripe": "^14.9.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "lucide-react": "^0.294.0",
+    "@headlessui/react": "^1.7.17",
+    "date-fns": "^2.30.0",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "nodemon": "^3.0.2"
+    "eslint-config-next": "14.0.4"
   }
 }
